--- a/alacritty.yml
+++ b/alacritty.yml
@@ -116,7 +116,7 @@ font:
     #style: Bold Italic
 
   # Point size
-  size: 10.0
+  size: 12.0
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
   #offset:
@@ -138,37 +138,37 @@ font:
 #draw_bold_text_with_bright_colors: false
 # Colors (Tomorrow Night)
 colors:
-  name: Belge
-  author: ""
+  name: Atelierforest (light)
+  author: Chris Kempson
   primary:
-    background: "#000000"
-    foreground: "#ffffff"
+    background: "#f1efee"
+    foreground: "#68615e"
   cursor:
-    text: "#000000"
-    cursor: "#ffffff"
+    text: "#f1efee"
+    cursor: "#68615e"
   normal:
-    black: "#252525"
-    red: "#ef6769"
-    green: "#a6e22e"
-    yellow: "#fd971f"
-    blue: "#6495ed"
-    magenta: "#deb887"
-    cyan: "#b0c4de"
-    white: "#dbdcdc"
+    black: "#1b1918"
+    red: "#f22c40"
+    green: "#5ab738"
+    yellow: "#d5911a"
+    blue: "#407ee7"
+    magenta: "#6666ea"
+    cyan: "#00ad9c"
+    white: "#a8a19f"
   bright:
-    black: "#454545"
-    red: "#fc7ca5"
-    green: "#b6e354"
-    yellow: "#fd971f"
-    blue: "#87ceeb"
-    magenta: "#996600"
-    cyan: "#87ceeb"
-    white: "#fdfdfd"
+    black: "#766e6b"
+    red: "#f22c40"
+    green: "#5ab738"
+    yellow: "#d5911a"
+    blue: "#407ee7"
+    magenta: "#6666ea"
+    cyan: "#00ad9c"
+    white: "#f1efee"
 # Background opacity
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 0.7
+background_opacity: 1
 
 #selection:
 #semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
