--- a/alacritty.yml
+++ b/alacritty.yml
@@ -149,7 +149,7 @@ colors:
   normal:
     black: "#303030"
     red: "#a43261"
-    green: "#006ca5"
+    green: "#FFF033"
     yellow: "#007086"
     blue: "#6751a6"
     magenta: "#913e88"
